takamaka_examples/src/takamaka/tests/errors/illegalcalltononwhitelistedconstructor1/C.java
package takamaka.tests.errors.illegalcalltononwhitelistedconstructor1;

import java.util.Random;

public class C {

	public int foo() {
		Random random = new Random(); // KO
		return random.nextInt();
	}
}